<resources>
    <string name="app_name" translatable="false">One Second</string>
    <string name="default_main_stopwatch">00.00</string>
    <string name="same_gamemode">You are already in this game mode</string>
    <string name="default_lowest_stopwatch">00</string>
    <string name="main_win">01.00</string>
    <string name="one_second_btn">1 second</string>
    <string name="lowest_btn">Tap Tap</string>
    <string name="mode_text">Mode:</string>
    <string name="help_text">\?</string>
    <string name="reset_btn">Reset</string>
    <string name="start_stop_btn">Start/Stop</string>
    <string name="attempts_default">0</string>
    <string name="attempts_text">Attempts:</string>
    <string name="reset_record_btn">Reset record</string>
    <string name="ms_text">ms</string>
    <string name="best_view_default">---</string>
    <string name="best_text">Best:</string>
    <string name="tt_btn">TT</string>
    <string name="mode_colen">Mode:</string>
    <string name="sign_in_text">Sign In</string>
    <string name="sign_out_text">Sign Out</string>

    <string name="intro_title1">One Second</string>
    <string name="intro_description1">Press the "Start/Stop" button to start the timer, click it again to stop it. Press "Reset" to clear the current timer. Goal: Get the stopwatch to show exactly 1 second.</string>
    <string name="intro_title2">Lowest Game Mode</string>
    <string name="intro_description2">Press the "Start/Stop" button and quickly press it again. Test your skills by trying to get the stopwatch to display the lowest time!</string>
    <string name="intro_title3">Enjoy!</string>
    <string name="intro_description3">Thanks for downloading, check out the achievements and leaderboards through the Google Play Games logo in the bottom left as well!</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="done">Done</string>
    <string name="statistics">Statistics</string>
    <string name="help">Help</string>
    <string name="default_statistic_integer">--</string>
    <string name="default_statistic_time">---</string>
    <string name="aatw_of_100">AAtW of 100:</string>
    <string name="aatw_of_50">AAtW of 50:</string>
    <string name="aatw_of_12">AAtW of 12:</string>
    <string name="aatw_of_5">AAtW of 5:</string>
    <string name="aatw_of_3">AAtW of 3:</string>
    <string name="time_deviation">Time Deviation:</string>
    <string name="attempts_deviation">Attempts Deviation:</string>
    <string name="least_attempts_to_win">Least Attempts to Win:</string>
    <string name="most_attempts_to_win">Most Attempts to Win:</string>
    <string name="aatw">AAtW:</string>
    <string name="average_time">Average Time:</string>
    <string name="total_special_times">Total Special Times:</string>
    <string name="total_wins">Total Wins:</string>
    <string name="total_attempts">Total Attempts:</string>
    <string name="current_attempts">Current Attempts:</string>
    <string name="you_are_here">You are already here</string>
    <string name="current_streak">Current Streak</string>
    <string name="best_streak">Best Streak</string>
    <string name="best_time">Lowest Time:</string>
    <string name="discord_link">https://discord.gg/zmFdPP2</string>
    <string name="discord">Discord</string>
</resources>
