<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/cell_1">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/cell_1">

            <TextView
                android:id="@+id/stat2_lowest_time_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/best_time"
                android:textSize="22sp"
                android:padding="3dp"
                android:layout_marginStart="10dp" />

            <LinearLayout
                android:layout_width="1dp"
                android:layout_height="match_parent" >

                <View style="@style/Divider" />
            </LinearLayout>

            <TextView
                android:id="@+id/stat2_lowest_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/default_statistic_integer"
                android:textSize="22sp"
                android:padding="3dp"
                android:gravity="center" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/cell_2">

            <TextView
                android:id="@+id/stat2_average_time_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/average_time"
                android:textSize="22sp"
                android:padding="3dp"
                android:layout_marginStart="10dp" />

            <LinearLayout
                android:layout_width="1dp"
                android:layout_height="match_parent" >

                <View style="@style/Divider" />
            </LinearLayout>

            <TextView
                android:id="@+id/stat2_average_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/default_statistic_integer"
                android:textSize="22sp"
                android:padding="3dp"
                android:gravity="center" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/cell_1">

            <TextView
                android:id="@+id/stat2_time_deviation_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/time_deviation"
                android:textSize="22sp"
                android:padding="3dp"
                android:layout_marginStart="10dp" />

            <LinearLayout
                android:layout_width="1dp"
                android:layout_height="match_parent" >

                <View style="@style/Divider" />
            </LinearLayout>

            <TextView
                android:id="@+id/stat2_time_deviation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/default_statistic_integer"
                android:textSize="22sp"
                android:padding="3dp"
                android:gravity="center" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/cell_2">

            <TextView
                android:id="@+id/stat2_total_special_times_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/total_special_times"
                android:textSize="22sp"
                android:padding="3dp"
                android:layout_marginStart="10dp" />

            <LinearLayout
                android:layout_width="1dp"
                android:layout_height="match_parent" >

                <View style="@style/Divider" />
            </LinearLayout>

            <TextView
                android:id="@+id/stat2_total_special_times"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/default_statistic_integer"
                android:textSize="22sp"
                android:padding="3dp"
                android:gravity="center" />

        </TableRow>

    </TableLayout>

</ScrollView>